fix spacing

--- a/static/style.css
+++ b/static/style.css
@@ -4,7 +4,7 @@ h1{
 
 .container {
     position:fixed;
-    left: 350px;
+    left: 100px;
     padding-top: 20px;
     margin: 0;
 }
